# pinecil-tetris

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.cargo/: config
src/: game.rs  main.rs
